# gpuim

./: AGENTS.md  Cargo.toml  taplo.toml
.github/workflows/: quality_check.yml
crates/collections/: Cargo.toml
crates/collections/src/: collections.rs  vecmap.rs  vecmap_tests.rs
crates/gpuim/: Cargo.toml
crates/gpuim-linux/: Cargo.toml
crates/gpuim-linux/src/: linux.rs
crates/gpuim-linux/src/linux/: dispatcher.rs  keyboard.rs  platform.rs  text_system.rs  wayland.rs  xdg_desktop_portal.rs
crates/gpuim-linux/src/linux/headless/: client.rs
crates/gpuim-linux/src/linux/wayland/: client.rs  clipboard.rs  cursor.rs  display.rs  layer_shell.rs  window.rs
crates/gpuim-linux/src/linux/x11/: client.rs  clipboard.rs  display.rs  event.rs  window.rs  xim_handler.rs
crates/gpuim-macos/: Cargo.toml  build.rs
crates/gpuim-macos/src/: dispatcher.rs  display.rs  display_link.rs  events.rs  gpui_macos.rs  keyboard.rs  metal_atlas.rs  metal_renderer.rs  open_type.rs  pasteboard.rs  platform.rs  screen_capture.rs  text_system.rs  window.rs  window_appearance.rs
crates/gpuim-macros/: Cargo.toml
crates/gpuim-macros/src/: derive_action.rs  derive_app_context.rs  derive_inspector_reflection.rs  derive_into_element.rs  derive_render.rs  derive_visual_context.rs  gpui_macros.rs  property_test.rs  register_action.rs  styles.rs  test.rs
crates/gpuim-macros/tests/: derive_context.rs  derive_inspector_reflection.rs  render_test.rs
crates/gpuim-platform/: Cargo.toml
crates/gpuim-platform/src/: gpui_platform.rs
crates/gpuim-shared-string/: Cargo.toml  gpui_shared_string.rs
crates/gpuim-tokio/: Cargo.toml
crates/gpuim-tokio/src/: gpui_tokio.rs
crates/gpuim-util/: Cargo.toml
crates/gpuim-util/src/: lib.rs
crates/gpuim-web/: Cargo.toml
crates/gpuim-web/examples/hello_web/: main.rs
crates/gpuim-web/src/: dispatcher.rs  display.rs  events.rs  http_client.rs  keyboard.rs  platform.rs  window.rs
crates/gpuim-wgpu/: Cargo.toml
crates/gpuim-wgpu/src/: cosmic_text_system.rs  wgpu_atlas.rs  wgpu_context.rs  wgpu_renderer.rs
crates/gpuim-windows/: Cargo.toml  build.rs
crates/gpuim-windows/src/: clipboard.rs  destination_list.rs  direct_manipulation.rs  direct_write.rs  directx_atlas.rs  directx_devices.rs  directx_renderer.rs  dispatcher.rs  display.rs  events.rs  gpui_windows.rs  keyboard.rs  platform.rs  system_settings.rs  util.rs  window.rs
crates/gpuim/examples/: active_state_bug.rs  animation.rs  clock.rs  counter.rs  data_table.rs  drag_drop.rs  focus_visible.rs  form.rs  gif_viewer.rs  gradient.rs  grid_layout.rs  hello_world.rs  image_gallery.rs  image_loading.rs  input.rs  layer_shell.rs  list_example.rs  mouse_pressure.rs  on_window_close_quit.rs  opacity.rs  ownership_post.rs  painting.rs  paths_bench.rs  pattern.rs  popover.rs  scrollable.rs  set_menus.rs  shadow.rs  tab_stop.rs  testing.rs  text.rs  text_layout.rs  text_wrapper.rs  todo.rs  tree.rs  uniform_list.rs  window.rs  window_positioning.rs  window_shadow.rs
crates/gpuim/examples/image/: image.rs
crates/gpuim/examples/svg/: svg.rs
crates/gpuim/src/: _ownership_and_data_flow.rs  action.rs  app.rs  arena.rs  asset_cache.rs  assets.rs  bounds_tree.rs  color.rs  colors.rs  element.rs  executor.rs  geometry.rs  global.rs  gpui.rs  input.rs  inspector.rs  interactive.rs  key_dispatch.rs  keymap.rs  path_builder.rs  platform.rs  platform_scheduler.rs  profiler.rs  queue.rs  scene.rs  style.rs  styled.rs  subscription.rs  svg_renderer.rs  tab_stop.rs  taffy.rs  test.rs  text_system.rs  util.rs  view.rs  window.rs
crates/gpuim/src/app/: async_context.rs  context.rs  entity_map.rs  headless_app_context.rs  test_app.rs  test_context.rs  visual_test_context.rs
crates/gpuim/src/elements/: anchored.rs  animation.rs  canvas.rs  deferred.rs  div.rs  image_cache.rs  img.rs  list.rs  surface.rs  svg.rs  text.rs  uniform_list.rs
crates/gpuim/src/keymap/: binding.rs  context.rs
crates/gpuim/src/platform/: app_menu.rs  keyboard.rs  keystroke.rs  layer_shell.rs  scap_screen_capture.rs  test.rs  visual_test.rs
crates/gpuim/src/platform/test/: dispatcher.rs  display.rs  platform.rs  window.rs
crates/gpuim/src/text_system/: font_features.rs  line.rs  line_layout.rs  line_wrapper.rs
crates/gpuim/src/window/: prompts.rs
crates/gpuim/tests/: action_macros.rs
crates/http-client/: Cargo.toml
crates/http-client-tls/: Cargo.toml
crates/http-client-tls/src/: http_client_tls.rs
crates/http-client/src/: async_body.rs  github.rs  github_download.rs  http_client.rs
crates/media/: Cargo.toml
crates/media/src/: media.rs
crates/perf/: Cargo.toml
crates/perf/src/: implementation.rs  main.rs
crates/refineable/: Cargo.toml
crates/refineable/derive-refineable/: Cargo.toml
crates/refineable/src/: refineable.rs
crates/reqwest-client/: Cargo.toml
crates/reqwest-client/src/: reqwest_client.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: clock.rs  executor.rs  scheduler.rs  test_scheduler.rs  tests.rs
crates/sum-tree/: Cargo.toml
crates/sum-tree/src/: cursor.rs  property_test.rs  sum_tree.rs  tree_map.rs
crates/util/: Cargo.toml
crates/util-macros/: Cargo.toml
crates/util-macros/src/: util_macros.rs
crates/util/src/: archive.rs  command.rs  disambiguate.rs  fs.rs  markdown.rs  path_list.rs  paths.rs  process.rs  rel_path.rs  schemars.rs  shell.rs  shell_builder.rs  shell_env.rs  test.rs  util.rs
crates/util/src/command/: darwin.rs
crates/util/src/test/: marked_text.rs
