[package]
name        = "collections"
version     = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Standard collection types used by GPUI"

[lints]
workspace = true

[lib]
path    = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap.workspace  = true
rustc-hash.workspace = true
