[package]
name              = "collections"
version           = { workspace = true }
edition.workspace = true
publish = false
license.workspace = true
description       = "Standard collection types used by GPUI"

[lints]
workspace = true

[lib]
path    = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap.workspace  = true
rustc-hash.workspace = true
