[package]
name              = "gpuim-macos"
version           = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/gpui_macos.rs"

[features]
default         = ["gpuim/default"]
test-support    = ["gpuim/test-support"]
runtime_shaders = []
font-kit        = ["dep:font-kit"]
screen-capture  = ["gpuim/screen-capture"]

[dependencies]
gpuim.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
anyhow.workspace              = true
async-task                    = "4"
block.workspace               = true
cocoa.workspace               = true
collections.workspace         = true
core-foundation.workspace     = true
core-foundation-sys.workspace = true
core-graphics.workspace       = true
core-text                     = "21"
core-video.workspace          = true
ctor.workspace                = true
derive_more.workspace         = true
dispatch2                     = "0.3"
etagere                       = "0.2"
font-kit                      = { workspace = true, optional = true }
foreign-types                 = "0.5"
futures.workspace             = true
image.workspace               = true
itertools.workspace           = true
libc.workspace                = true
log.workspace                 = true
mach2.workspace               = true
media.workspace               = true
metal.workspace               = true
objc.workspace                = true
objc2-app-kit.workspace       = true
parking_lot.workspace         = true
pathfinder_geometry           = "0.5"
raw-window-handle             = "0.6"
semver.workspace              = true
smallvec.workspace            = true
strum.workspace               = true
util.workspace                = true
uuid.workspace                = true

[target.'cfg(target_os = "macos")'.build-dependencies]
cbindgen.workspace = true
gpuim.workspace    = true
