[package]
name              = "gpuim-macros"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true
description       = "Procedural macros for gpuim"

[lints]
workspace = true

[features]
inspector = []

[lib]
path       = "src/gpui_macros.rs"
proc-macro = true
doctest    = true

[dependencies]
heck.workspace         = true
proc-macro2.workspace  = true
quote.workspace        = true
syn.workspace          = true

[dev-dependencies]
gpuim = { workspace = true, features = ["inspector"] }
