[package]
name              = "gpuim-tokio"
version           = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path    = "src/gpui_tokio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
util.workspace   = true
gpuim.workspace  = true
tokio            = { workspace = true, features = ["rt", "rt-multi-thread"] }
