[package]
name              = "gpuim-tokio"
version           = { workspace = true }
edition.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[lib]
path    = "src/gpui_tokio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
util.workspace   = true
gpuim.workspace  = true
tokio            = { workspace = true, features = ["rt", "rt-multi-thread"] }
