[package]
name              = "gpuim-wgpu"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/gpui_wgpu.rs"

[features]
default  = []
font-kit = ["dep:font-kit"]

[dependencies]
gpuim.workspace       = true
anyhow.workspace      = true
bytemuck              = "1"
collections.workspace = true
cosmic-text           = "0.18"
etagere               = "0.2"
itertools.workspace   = true
log.workspace         = true
parking_lot.workspace = true
profiling.workspace   = true
raw-window-handle     = "0.6"
smallvec.workspace    = true
swash                 = "0.2"
gpuim-util.workspace  = true
wgpu.workspace        = true
font-kit              = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace        = true
wasm-bindgen-futures          = "0.4"
web-sys                       = { version = "0.3", features = ["HtmlCanvasElement"] }
js-sys                        = "0.3"
