[package]
name              = "gpuim-windows"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/gpui_windows.rs"

[features]
default        = ["gpuim/default"]
test-support   = ["gpuim/test-support"]
screen-capture = ["gpuim/screen-capture", "scap"]

[dependencies]
gpuim.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
anyhow.workspace         = true
collections.workspace    = true
etagere                  = "0.2"
futures.workspace        = true
image.workspace          = true
itertools.workspace      = true
log.workspace            = true
parking_lot.workspace    = true
rand.workspace           = true
raw-window-handle        = "0.6"
smallvec.workspace       = true
util.workspace           = true
uuid.workspace           = true
windows.workspace        = true
windows-core.workspace   = true
windows-numerics         = "0.3"
windows-registry         = "0.6"

[target.'cfg(target_os = "windows")'.dependencies.scap]
workspace = true
optional  = true

[target.'cfg(target_os = "windows")'.build-dependencies]
windows-registry = "0.6"
