[package]
name        = "gpuim"
version     = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "A GPU-accelerated UI framework (fork of Zed's GPUI)"
repository.workspace = true
publish.workspace = true
license.workspace = true
homepage    = "https://github.com/Reverier-Xu/gpuim"
readme      = "README.md"
keywords    = ["desktop", "gui", "immediate"]
categories  = ["gui"]

[lints]
workspace = true

[features]
default         = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support    = [
    "leak-detection",
    "collections/test-support",
    "http-client/test-support",
    "wayland",
    "x11",
    "proptest",
]
inspector       = ["gpuim-macros/inspector"]
leak-detection  = ["backtrace"]
wayland         = ["bitflags"]
x11             = ["scap?/x11"]
screen-capture  = ["scap"]
windows-manifest = ["dep:embed-resource"]
input-latency-histogram = ["dep:hdrhistogram"]

[lib]
path    = "src/gpui.rs"
doctest = false

[dependencies]
anyhow.workspace      = true
async-task            = "4.7"
backtrace             = { workspace = true, optional = true }
bitflags              = { workspace = true, optional = true }
collections.workspace = true
ctor.workspace        = true
derive_more.workspace = true
etagere               = "0.2"
futures.workspace     = true
futures-concurrency.workspace = true
gpuim-macros.workspace = true
gpuim-shared-string.workspace = true
http-client.workspace = true
image.workspace       = true
inventory.workspace   = true
itertools.workspace   = true
log.workspace         = true
num_cpus              = "1.13"
parking               = "2.0"
parking_lot.workspace = true
postage.workspace     = true
proptest              = { workspace = true, optional = true }
chrono.workspace      = true
profiling.workspace   = true
rand.workspace        = true
raw-window-handle     = "0.6"
regex.workspace       = true
refineable.workspace  = true
scheduler.workspace   = true
resvg                 = { version = "0.45", default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
    "raster-images",
] }
usvg         = { version = "0.45", default-features = false }
ttf-parser   = "0.25"
util-macros.workspace = true
schemars.workspace    = true
seahash      = "4.1"
serde.workspace       = true
serde_json.workspace  = true
slotmap.workspace     = true
smallvec.workspace    = true
async-channel.workspace = true
stacksafe.workspace   = true
strum.workspace       = true
sum-tree.workspace    = true
taffy                  = "=0.9.0"
thiserror.workspace   = true
gpuim-util.workspace  = true
hdrhistogram           = { workspace = true, optional = true }
waker-fn               = "1.2"
lyon                   = "1.0"
pin-project            = "1.1"
spin                   = "0.10"
pollster.workspace     = true
url.workspace          = true
uuid.workspace         = true
web-time.workspace     = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid      = { workspace = true, features = ["js"] }

[target.'cfg(target_os = "macos")'.dependencies]
block.workspace              = true  # re-exported from cocoa
cocoa.workspace              = true
cocoa-foundation.workspace   = true
core-foundation.workspace    = true
core-foundation-sys.workspace = true
core-graphics                = "0.24"
core-video.workspace         = true
core-text                    = "21"
font-kit                     = { workspace = true, optional = true }
foreign-types                = "0.5"
log.workspace                = true
media.workspace              = true
objc.workspace               = true
objc2                        = { version = "0.6", optional = true }
objc2-metal                  = { version = "0.3", optional = true }
mach2.workspace              = true
metal.workspace              = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
pathfinder_geometry = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows"))'.dependencies]
scap = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation"] }

[dev-dependencies]
backtrace.workspace    = true
collections            = { workspace = true, features = ["test-support"] }
env_logger.workspace   = true
gpuim-platform         = { workspace = true, features = ["font-kit"] }
gpuim-util.workspace   = true
lyon                   = { version = "1.0", features = ["extra"] }
proptest.workspace     = true
rand.workspace         = true
scheduler              = { workspace = true, features = ["test-support"] }
unicode-segmentation.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
http-client     = { workspace = true, features = ["test-support"] }
reqwest-client  = { workspace = true, features = ["test-support"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen.workspace = true
gpuim-web.workspace    = true

[build-dependencies]
embed-resource = { version = "3.0", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen  = "0.71"
cbindgen = { version = "0.28", default-features = false }
naga.workspace = true

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "image"
path = "examples/image/image.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "on_window_close_quit"
path = "examples/on_window_close_quit.rs"

[[example]]
name = "opacity"
path = "examples/opacity.rs"

[[example]]
name = "pattern"
path = "examples/pattern.rs"

[[example]]
name = "set_menus"
path = "examples/set_menus.rs"

[[example]]
name = "shadow"
path = "examples/shadow.rs"

[[example]]
name = "svg"
path = "examples/svg/svg.rs"

[[example]]
name = "tab_stop"
path = "examples/tab_stop.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "text_wrapper"
path = "examples/text_wrapper.rs"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "uniform_list"
path = "examples/uniform_list.rs"

[[example]]
name = "window_shadow"
path = "examples/window_shadow.rs"

[[example]]
name = "grid_layout"
path = "examples/grid_layout.rs"

[[example]]
name = "list_example"
path = "examples/list_example.rs"

[[example]]
name = "mouse_pressure"
path = "examples/mouse_pressure.rs"
