[package]
name              = "http-client-tls"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
test-support = []

[lib]
path    = "src/http_client_tls.rs"
doctest = true

[dependencies]
rustls.workspace                  = true
rustls-platform-verifier.workspace = true
