[package]
name              = "http-client"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true
description       = "A HTTP client abstraction for GPUI"

[lints]
workspace = true

[features]
test-support = []

[lib]
path    = "src/http_client.rs"
doctest = true

[dependencies]
anyhow.workspace            = true
async-compression.workspace = true
bytes.workspace             = true
derive_more.workspace       = true
futures.workspace           = true
http-body.workspace         = true
http.workspace              = true
log.workspace               = true
parking_lot.workspace       = true
serde.workspace             = true
serde_json.workspace        = true
serde_urlencoded.workspace  = true
url.workspace               = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
util.workspace       = true
async-fs.workspace   = true
async-std.workspace  = true
async-tar.workspace  = true
sha2.workspace       = true
tempfile.workspace   = true
