[package]
name              = "perf"
version           = { workspace = true }
edition.workspace = true
publish = false
license.workspace = true
description       = "Performance measurement utilities for GPUI tests"

[lib]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
needless_continue               = "allow"
all                             = "warn"
pedantic                        = "warn"
style                           = "warn"
missing_docs_in_private_items   = "warn"
as_underscore                   = "deny"
allow_attributes                = "deny"
allow_attributes_without_reason = "deny"
let_underscore_must_use         = "forbid"
undocumented_unsafe_blocks      = "forbid"
missing_safety_doc              = "forbid"
disallowed_methods              = { level = "allow", priority = 1 }

[dependencies]
collections.workspace = true
serde.workspace       = true
serde_json.workspace  = true
