[package]
name              = "refineable"
version           = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description       = "A macro for creating refinement types for partial initialization"

[lints]
workspace = true

[lib]
path    = "src/refineable.rs"
doctest = false

[dependencies]
derive-refineable.workspace = true
