[package]
name              = "refineable"
version           = { workspace = true }
edition.workspace = true
publish = false
license.workspace = true
description       = "A macro for creating refinement types for partial initialization"

[lints]
workspace = true

[lib]
path    = "src/refineable.rs"
doctest = false

[dependencies]
derive-refineable.workspace = true
