[package]
name              = "reqwest-client"
version           = { workspace = true }
edition.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[features]
test-support = []

[lib]
path    = "src/reqwest_client.rs"
doctest = true

[dependencies]
anyhow.workspace      = true
bytes.workspace       = true
futures.workspace     = true
http-client.workspace = true
serde.workspace       = true
log.workspace         = true
tokio                 = { workspace = true, features = ["rt", "rt-multi-thread"] }
regex.workspace       = true
reqwest.workspace     = true
gpuim-util.workspace  = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
http-client-tls.workspace = true

[dev-dependencies]
