[package]
name              = "scheduler"
version           = { workspace = true }
edition.workspace = true
publish = false
license.workspace = true

[lints]
workspace = true

[lib]
path    = "src/scheduler.rs"
doctest = false

[features]
test-support = []

[dependencies]
async-task.workspace  = true
backtrace.workspace   = true
chrono.workspace      = true
flume                 = "0.12"
futures.workspace     = true
parking_lot.workspace = true
rand.workspace        = true
web-time.workspace    = true
