[package]
name              = "sum-tree"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true
description       = "A sum tree data structure, a concurrency-friendly B-tree"

[lints]
workspace = true

[lib]
path    = "src/sum_tree.rs"
doctest = false

[dependencies]
heapless.workspace = true
rayon.workspace    = true
log.workspace      = true
tracing.workspace  = true
proptest           = { workspace = true, optional = true }

[dev-dependencies]
ctor.workspace       = true
env_logger.workspace = true
rand.workspace       = true
proptest.workspace   = true

[package.metadata.cargo-machete]
ignored = ["tracing"]

[features]
test-support = ["proptest"]
