[package]
name              = "util-macros"
version           = { workspace = true }
edition.workspace = true
publish.workspace = true
license.workspace = true
description       = "Utility macros for GPUI"

[lints]
workspace = true

[lib]
path       = "src/util_macros.rs"
proc-macro = true
doctest    = false

[dependencies]
quote.workspace = true
syn.workspace   = true
perf.workspace  = true

[features]
perf-enabled = []
